--- a/back-end/bloco22-introducao-ao-desenvolvimento-web-com-node-js/dia01-nodejs-um-motos-javascript/exercises/package.json
+++ b/back-end/bloco22-introducao-ao-desenvolvimento-web-com-node-js/dia01-nodejs-um-motos-javascript/exercises/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "imc": "node index.js"
+    "imc": "node imc.js"
   },
   "keywords": [],
   "author": "",
