--- a/back-end/bloco22-introducao-ao-desenvolvimento-web-com-node-js/dia01-nodejs-um-motos-javascript/exercises/package.json
+++ b/back-end/bloco22-introducao-ao-desenvolvimento-web-com-node-js/dia01-nodejs-um-motos-javascript/exercises/package.json
@@ -8,7 +8,9 @@
     "start": "node index.js",
     "imc": "node imc.js",
     "velocidade": "node velocidade.js",
-    "sorteio": "node sorteio.js"
+    "sorteio": "node sorteio.js",
+    "fatorial": "node fatorial.js",
+    "fibonacci": "node fibonacci.js"
   },
   "keywords": [],
   "author": "",
