--- a/bloco22/dia03-mocha-chai-e-sinon-testes-de-back-end-com-node-js/exercises/package.json
+++ b/bloco22/dia03-mocha-chai-e-sinon-testes-de-back-end-com-node-js/exercises/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "mocha tests.js"
+    "test": "mocha tests.js",
+    "start": "node writeFile.js"
   },
   "keywords": [],
   "author": "",
