--- a/fix-exercises/model-example/package.json
+++ b/fix-exercises/model-example/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "body-parser": "^1.19.1",
     "express": "^4.17.2",
+    "express-rescue": "^1.1.31",
+    "joi": "^17.5.0",
     "mysql2": "^2.3.3"
   },
   "devDependencies": {
