--- a/exercises/cep-lookup/package.json
+++ b/exercises/cep-lookup/package.json
@@ -14,7 +14,10 @@
   "dependencies": {
     "body-parser": "^1.19.1",
     "dotenv": "^14.3.2",
-    "express": "^4.17.2"
+    "express": "^4.17.2",
+    "express-rescue": "^1.1.31",
+    "joi": "^17.5.0",
+    "mysql2": "^2.3.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
