Exercicio bonus finalizado + refatoracao de imports por conta da versao do node

--- a/exercises/cep-lookup/package.json
+++ b/exercises/cep-lookup/package.json
@@ -8,6 +8,7 @@
     "start": "node index.js",
     "dev": "nodemon index.js"
   },
+  "type": "module",
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -17,7 +18,8 @@
     "express": "^4.17.2",
     "express-rescue": "^1.1.31",
     "joi": "^17.5.0",
-    "mysql2": "^2.3.3"
+    "mysql2": "^2.3.3",
+    "node-fetch": "^3.2.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
