--- a/fix-exercises/testExercise/package.json
+++ b/fix-exercises/testExercise/package.json
@@ -15,6 +15,9 @@
     "mysql2": "^2.3.3"
   },
   "devDependencies": {
-    "nodemon": "^2.0.15"
+    "chai": "^4.3.6",
+    "mocha": "^9.2.0",
+    "nodemon": "^2.0.15",
+    "sinon": "^12.0.1"
   }
 }
