--- a/exercises/exercise/package.json
+++ b/exercises/exercise/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha ./tests/**/*$NAME*.test.js --exit",
     "dev": "nodemon index.js"
   },
   "keywords": [],
@@ -18,7 +18,12 @@
     "sequelize": "^6.16.0"
   },
   "devDependencies": {
+    "chai": "^4.3.6",
+    "chai-http": "^4.3.0",
+    "mocha": "^9.2.0",
     "nodemon": "^2.0.15",
-    "sequelize-cli": "^6.4.1"
+    "sequelize-cli": "^6.4.1",
+    "sequelize-test-helpers": "^1.4.2",
+    "sinon": "^13.0.1"
   }
 }
