--- a/fix-exercises/fixing-exercise/.env
+++ b/fix-exercises/fixing-exercise/.env
@@ -1,5 +1,6 @@
 MYSQL_USER=root
 MYSQL_PASSWORD=password
 MYSQL_DATABASE=fix_exercise_24_2
+MYSQL_TEST_DATABASE=test_fix_exercise_24_2
 MYSQL_HOST=127.0.0.1
 PORT=3000
