--- a/fix-exercises/fixing-exercise/package.json
+++ b/fix-exercises/fixing-exercise/package.json
@@ -4,8 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "test": "NODE_ENV=test mocha ./tests/**/*$NAME*.test.js --exit",
+    "start": "nodemon index.js",
+    "create:db:test": "NODE_ENV=test sequelize-cli db:create",
+    "migrate:db:test": "NODE_ENV=test sequelize-cli db:migrate",
+    "seed:db:test": "NODE_ENV=test sequelize-cli db:seed:all",
+    "drop:db:test": "NODE_ENV=test sequelize-cli db:drop"
   },
   "keywords": [],
   "author": "",
@@ -18,7 +22,11 @@
     "sequelize": "^6.16.1"
   },
   "devDependencies": {
+    "chai": "^4.3.6",
+    "chai-http": "^4.3.0",
+    "mocha": "^9.2.0",
     "nodemon": "^2.0.15",
-    "sequelize-cli": "^6.4.1"
+    "sequelize-cli": "^6.4.1",
+    "sinon": "^13.0.1"
   }
 }
