--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "main": "./api/server.js",
   "scripts": {
     "prestart": "npx sequelize db:drop && npx sequelize db:create && npx sequelize db:migrate && npx sequelize db:seed:all",
-    "start": "nodemon ."
+    "start": "nodemon ./src/api/server.js",
+    "test": "nyc --include='src/**/*.js' mocha ./tests/**/*$NAME*.test.js --exit",
+    "test:coverage":"nyc --include='src/**/*.js' npm run test"
   },
   "dependencies": {
     "bcryptjs": "2.4.3",
@@ -19,10 +21,10 @@
     "sequelize-cli": "6.4.1"
   },
   "devDependencies": {
-    "chai": "4.3.6",
-    "chai-http": "4.3.0",
-    "mocha": "9.2.0",
-    "nyc": "15.1.0",
-    "sinon": "12.0.1"
+    "chai": "^4.3.6",
+    "chai-http": "^4.3.0",
+    "mocha": "^9.2.0",
+    "nyc": "^15.1.0",
+    "sinon": "^12.0.1"
   }
 }
