--- a/exercises/1users-CRUD/package.json
+++ b/exercises/1users-CRUD/package.json
@@ -15,7 +15,8 @@
   "dependencies": {
     "body-parser": "^1.19.2",
     "dotenv": "^16.0.0",
-    "express": "^4.17.3"
+    "express": "^4.17.3",
+    "joi": "^17.6.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
