--- a/fix-exercises/class/package.json
+++ b/fix-exercises/class/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "tsc && node dist/index.js"
+    "start": "tsc && node dist/index.js",
+    "dev": "npx tsc && node dist/$NAME"
   },
   "keywords": [],
   "author": "",
