--- a/fix-exercises/package.json
+++ b/fix-exercises/package.json
@@ -1,4 +1,5 @@
 {
+  "type": "module",
   "name": "fix-exercises",
   "version": "1.0.0",
   "description": "",
@@ -13,5 +14,8 @@
   "devDependencies": {
     "@types/node": "^17.0.21",
     "typescript": "^4.6.2"
+  },
+  "dependencies": {
+    "node-fetch": "^3.2.3"
   }
 }
