--- a/exercises/package.json
+++ b/exercises/package.json
@@ -15,9 +15,10 @@
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/node": "^16.7.8",
-    "@typescript-eslint/eslint-plugin": "^4.30.0",
-    "@typescript-eslint/parser": "^4.30.0",
+    "@typescript-eslint/eslint-plugin": "^5.15.0",
+    "@typescript-eslint/parser": "^5.15.0",
     "eslint": "^7.32.0",
+    "eslint-config-airbnb-typescript": "^16.1.3",
     "eslint-plugin-import": "^2.24.2",
     "eslint-plugin-mocha": "^9.0.0",
     "eslint-plugin-sonarjs": "^0.10.0",
