--- a/fix-exercises/package.json
+++ b/fix-exercises/package.json
@@ -1,19 +1,17 @@
 {
-  "name": "solid-2",
+  "name": "exercises",
   "version": "1.0.0",
+  "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "npx ts-node src"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords": [],
+  "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/mysql": "^2.15.19",
-    "@types/redis": "^2.8.32"
-  },
-  "dependencies": {
-    "ts-node": "^10.2.1",
-    "mysql": "^2.18.1",
-    "redis": "^3.1.2",
-    "typescript": "^4.4.3"
+    "@types/node": "^17.0.21",
+    "ts-node": "^10.7.0",
+    "typescript": "^4.6.2"
   }
 }
